--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  @keyframes ballAnimation {
+    0% {
+      bottom: 0px; 
+    }
+    50% {
+      bottom: 40px; 
+    }
+    100% {
+      bottom: 0px; 
+    }
+  }
+
+  .ball-animation {
+    animation: ballAnimation 1s ease-in-out infinite reverse;
+  }
+}
